<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleprimary"
    android:fadeScrollbars="false"
    android:orientation="vertical"
    tools:context=".MyAccount">

    <TextView
        android:id="@+id/TvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:text="@string/my_account"
        android:textColor="@color/purple_500"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BTNback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/black"
        android:text="Back"
        app:backgroundTint="@color/purple_200" />

    <TextView
        android:id="@+id/TvMAName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/name"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/TvMAEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/email"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/TvMAphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/phone_number"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/TvMAaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:fadeScrollbars="false"
        android:scrollbarSize="4dp"
        android:text="@string/address"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <Button
        android:id="@+id/BtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="update" />

    <EditText
        android:id="@+id/EtNameMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/EtEmailMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/EtNumberMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="textPersonName"
        android:text="Enter Phone Number  "
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/EtAdressMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textPersonName"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="24sp" />

    <Button
        android:id="@+id/BtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="Save" />

    <Button
        android:id="@+id/BtnBackHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:foregroundGravity="center_horizontal"
        android:text="@string/home"
        app:backgroundTint="@color/purple_200"
        app:iconGravity="end" />

</LinearLayout>