<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleprimary"
    android:orientation="vertical"
    tools:context=".ShippingDetail">

    <TextView
        android:id="@+id/TvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:text="Shipping Details"
        android:textColor="@color/purple_500"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BTNback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/black"
        android:text="Back"
        app:backgroundTint="@color/purple_200" />

    <TextView
        android:id="@+id/TvMAName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/name"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/TvMAEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/email"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/TvMAphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/phone_number"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/TvMAaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:fadeScrollbars="false"
        android:scrollbarSize="4dp"
        android:text="@string/address"
        android:textColor="@color/purple_700"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/msgshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@color/purpleprimary"
        android:text="You can update details in My Account"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>