<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleprimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000000"
        android:gravity="center_horizontal|center_vertical"
        android:text="Update Student. . ."
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/EtAddBookNameUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"

        android:hint="@string/enter_book_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/EtAddBookDesUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"

        android:hint="@string/enter_book_description"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/EtAddBookAuthorUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/enter_author_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/EtAddBookPriceUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Enter Price"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/BtnAddBookDBUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="Add Book" />

    <Button
        android:id="@+id/BTNback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/black"
        android:backgroundTint="@color/teal_200"
        android:text="Back"
        app:backgroundTint="@color/purple_200" />

</LinearLayout>