<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleprimary"
    android:orientation="vertical"
    tools:context=".Reciept">
    <Button
        android:id="@+id/BTNback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/black"
        android:text="Back"
        app:backgroundTint="@color/purple_200" />


    <EditText
        android:id="@+id/etAddBookNameUp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Book has been ordered. Details are as follow : "
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/BookNameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Book Name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/BookDesR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/AuthorNameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Author Name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/PriceR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Price"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etAddBookNameUp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Your shipping details are as follow : "
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/NameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/AddressR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/PhoneR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/EmailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etAddBookNameUp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="You will get your order in 3-5 working days. Thanks for shopping "
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        android:textStyle="bold|italic" />

</LinearLayout>